--- a/README.textile
+++ b/README.textile
@@ -62,14 +62,25 @@ Elements are best added by using simple methods (listed below). Most of these me
 
 The GuiState itself only accepts #pack, but any packer or group accepts any other element method.
 
-h3. Arrangement managers
+h3. GuiState methods
+
+* _pack([:vertical|:horizontal|:grid], ...)_ - Add a packer to the state (Block has access to public methods).
+* _clear()_ - remove any packers added to the state.
+* _menu(...)_ - Show a context menu (Block has access to public methods).
+* _message(text, ...)_ - Show a message box with button(s) (Block subscribes to a button getting clicked).
+
+h3. Container methods
+
+h4. Arrangement managers
 
 Fidgit uses automatic packers to manage layout.
 
 * _pack([:vertical|:horizontal|:grid], ...)_ - Packer that packs its component elements (Block has access to public methods).
 * _group(...)_ - Manages any groupable elements put inside it, such as radio-buttons (Block has access to public methods). Best to subscribe to :changed event handler.
 
-h3. Elements
+h4. Elements
+
+Elements can be placed inside a packer or group.
 
 * _button(...)_ - Button with text and/or icon (Block handles :clicked_left_mouse_button event).
 * _color_picker(...)_ - Red, green and blue sliders and colour indicator (Block handles :changed event).
@@ -78,14 +89,14 @@ h3. Elements
 * _text_area(...)_ - An multi-line element, containing editable text (Block handles :changed event).
 * _toggle_button(...)_ - Button that can be toggled on/off (Block handles :clicked_left_mouse_button event).
 
-h4. Groupable elements
+h5. Groupable elements
 
 These should be placed within a group (directly or indirectly) and only one of them will be selected. The group manages which one is selected.
 
 * _color_well(color, ...)_ - A radio-button used to pick a colour (Block handles :clicked_left_mouse_button event).
 * _radio_button(value, ...)_ - Button that is part of a group (Block handles :clicked_left_mouse_button event).
 
-h3. Compound elements
+h5. Compound elements
 
 These elements contain items, which can easily be added from within a block passed to them. One can subscribe to the :changed event, which is usually easier than managing each item separately.
 
