Added GuiState#file_dialog and Container#file_browser to wrap the class creation.

--- a/README.textile
+++ b/README.textile
@@ -68,6 +68,7 @@ h3. GuiState methods
 * _clear()_ - remove any packers added to the state.
 * _menu(...)_ - Show a context menu (Block has access to public methods).
 * _message(text, ...)_ - Show a message box with button(s) (Block subscribes to a button getting clicked).
+* _file_dialog([:open, :save], ...)_ - Open a file dialog to load or save a file (Block is passed the button pressed and the file path set).
 
 h3. Container methods
 
@@ -84,6 +85,7 @@ Elements can be placed inside a packer or group.
 
 * _button(...)_ - Button with text and/or icon (Block handles :clicked_left_mouse_button event).
 * _color_picker(...)_ - Red, green and blue sliders and colour indicator (Block handles :changed event).
+* _file_browser([:open, :save], ...)_ - A file browser to load or save a file (Block is passed the button pressed and the file path set)
 * _label(text, ...)_ - Label with text and, optionally, an icon (No block accepted).
 * _slider(...)_ - Horizontal slider with handle (Block handles :changed event handler).
 * _text_area(...)_ - An multi-line element, containing editable text (Block handles :changed event).
