--- a/README.textile
+++ b/README.textile
@@ -24,15 +24,14 @@ h2. Requirements
 
 h2. Example
 
-<pre>require 'fidgit'
+<pre># require 'fidgit'
 
 class MyGame < Chingu::Window
   def initialize
     super(640, 480, false)
-  end
 
-  def setup
-    push_game_state MyGuiState # To use Fidgit, a Fidgit::GuiState must be active.
+    # To use the Fidgit features, a Fidgit::GuiState must be active.
+    push_game_state MyGuiState
   end
 end
 
@@ -40,10 +39,13 @@ class MyGuiState < Fidgit::GuiState
   def initialize
     super
 
-    pack :vertical do # Create a vertically packed section.
+    # Create a vertically packed section, centred in the window.
+    pack :vertical, align: :center do
+      # Create a label with a dark green background.
       my_label = label "Hello world!", background_color: Gosu::Color.rgb(0, 100, 0)
 
-      button text: "Goodbye" do
+      # Create a button that, when clicked, changes the label.
+      button("Goodbye", align_h: :center, tip: "Press me and be done with it!") do
         my_label.text = "Goodbye cruel world!"
       end
     end
@@ -67,7 +69,7 @@ h3. GuiState methods
 * _pack([:vertical|:horizontal|:grid], ...)_ - Add a packer to the state (Block has access to public methods).
 * _clear()_ - remove any packers added to the state.
 * _menu(...)_ - Show a context menu (Block has access to public methods).
-** _item(value, ...)_ - Item in a menu (Block handles :clicked_left_mouse_button event).
+** _item(text, value, ...)_ - Item in a menu (Block handles :clicked_left_mouse_button event).
 ** _separator(...)_ - A horizontal separator between menu items.
 * _message(text, ...)_ - Show a message box with button(s) (Block subscribes to a button getting clicked).
 * _file_dialog([:open, :save], ...)_ - Open a file dialog to load or save a file (Block is passed the button pressed and the file path set).
@@ -86,28 +88,28 @@ h4. Elements
 
 Elements can be placed inside a packer or group.
 
-* _button(...)_ - Button with text and/or icon (Block handles :clicked_left_mouse_button event).
+* _button(text, ...)_ - Button with text and/or icon (Block handles :clicked_left_mouse_button event).
 * _color_picker(...)_ - Red, green and blue sliders and colour indicator (Block handles :changed event).
 * _label(text, ...)_ - Label with text and, optionally, an icon (No block accepted).
 * _slider(...)_ - Horizontal slider with handle (Block handles :changed event).
 * _text_area(...)_ - An multi-line element, containing editable text (Block handles :changed event).
-* _toggle_button(...)_ - Button that can be toggled on/off (Block handles :changed event).
+* _toggle_button(text, ...)_ - Button that can be toggled on/off (Block handles :changed event).
 
 h5. Groupable elements
 
 These should be placed within a group (directly or indirectly) and only one of them will be selected. The group manages which one is selected.
 
 * _color_well(color, ...)_ - A radio-button used to pick a colour (Block handles :clicked_left_mouse_button event).
-* _radio_button(value, ...)_ - Button that is part of a group (Block handles :clicked_left_mouse_button event).
+* _radio_button(text, value, ...)_ - Button that is part of a group (Block handles :clicked_left_mouse_button event).
 
 h5. Compound elements
 
 These elements contain items, which can easily be added from within a block passed to them. One can subscribe to the :changed event, which is usually easier than managing each item separately.
 
 * _combo_box(...)_ - Button that has a drop-down menu attached (Block has access to public methods).
-** _item(value, ...)_ - Add an item to a combo box (Block handles :clicked_left_mouse_button event).
+** _item(text, value, ...)_ - Add an item to a combo box (Block handles :clicked_left_mouse_button event).
 * _list(...)_ - A vertical list of items to select from (Block has access to public methods).
-** _item(value, ...)_ - Add an item to a combo box (Block handles :clicked_left_mouse_button event).
+** _item(text, value, ...)_ - Add an item to a combo box (Block handles :clicked_left_mouse_button event).
 
 
 h2. Alternative GUI frameworks
