--- a/README.textile
+++ b/README.textile
@@ -26,7 +26,7 @@ h2. Example
 
 <pre># require 'fidgit'
 
-class MyGame < Chingu::Window
+class MyGame < Fidgit::Window
   def initialize
     super(640, 480, false)
 
